@@ -130,6 +130,20 @@ SUPPORTED - Ubuntu 14.04 LTS and 16.04 LTS
         -DDCMTK_LIBRARIES=dcmjpls \
         -DCMAKE_BUILD_TYPE=Release \
         ~/Orthanc
+# make
+
+
+NB: Instructions to use clang and ninja:
+
+# sudo apt-get install ninja-build
+# CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake -G Ninja \
+        -DALLOW_DOWNLOADS=ON \
+        -DUSE_GOOGLE_TEST_DEBIAN_PACKAGE=ON \
+        -DUSE_SYSTEM_CIVETWEB=OFF \
+        -DDCMTK_LIBRARIES=dcmjpls \
+        -DCMAKE_BUILD_TYPE=Release \
+        ~/Orthanc
+# ninja
 
 
 
